objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Donation</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>NPSP_Default</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Code__c</fullName>
        <formula>IF(ISBLANK(Campaign.tfn_npsp_TechOne_GL_Code__c), &quot;Assign GL Code to Campaign&quot;,
Campaign.tfn_npsp_TechOne_GL_Code__r.tfn_T1_Project_ID__c  + &quot;-9990-&quot; + npsp__Primary_Contact__r.Donor_Type__r.Donor_Code__c
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>TRIM(
IF(ISBLANK(AccountId) || Account.RecordType.DeveloperName = &apos;HH_Account&apos;,
TEXT(npsp__Primary_Contact__r.Salutation) + &quot; &quot; + npsp__Primary_Contact__r.FirstName + &quot; &quot; + npsp__Primary_Contact__r.LastName,
Account.Name)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <formula>IF(ISBLANK( AccountId ) || Account.RecordType.DeveloperName = &apos;HH_Account&apos; || ISBLANK(Account.npe01__One2OneContact__c),
IF(ISBLANK(npsp__Primary_Contact__c), &apos;donor&apos;, npsp__Primary_Contact__r.FirstName),
Account.npe01__One2OneContact__r.FirstName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FirstName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <formula>IF(ISBLANK( AccountId ) || Account.RecordType.DeveloperName = &apos;HH_Account&apos;,
npsp__Primary_Contact__r.MailingStreet,
Account.BillingStreet )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suburb_State__c</fullName>
        <formula>IF(ISBLANK( AccountId ) || Account.RecordType.DeveloperName = &apos;HH_Account&apos;,
npsp__Primary_Contact__r.MailingCity + &quot; &quot; + npsp__Primary_Contact__r.MailingState + &quot; &quot; + npsp__Primary_Contact__r.MailingPostalCode,
Account.BillingCity + &quot; &quot; + Account.BillingState + &quot; &quot; + Account.BillingPostalCode )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suburb State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_npsp_GL_Post_Date__c</fullName>
        <label>GL Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tfn_npsp_GL_Post_Status__c</fullName>
        <label>GL Post Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Posted</fullName>
                </value>
                <value>
                    <fullName>Not Posted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_npsp_Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Gift-in-Kind</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pay-Cash</fullName>
                </value>
                <value>
                    <fullName>Pledge</fullName>
                </value>
                <value>
                    <fullName>Recurring Gift</fullName>
                </value>
                <value>
                    <fullName>Recurring Gift Pay-Cash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_npsp_RE_Gift_ID__c</fullName>
        <label>RE Gift ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_npsp_RE_Gift_Import_ID__c</fullName>
        <label>RE Gift Import ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Donation</fullName>
        <active>true</active>
        <businessProcess>Donation</businessProcess>
        <description>Donation being prospected or already received</description>
        <label>Donation</label>
    </recordTypes>
    <recordTypes>
        <fullName>NPSP_Default</fullName>
        <active>true</active>
        <businessProcess>NPSP_Default</businessProcess>
        <label>NPSP Default</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>